# rsvp

./: .gitignore  README.md  biome.json  config.yaml  docker-compose.yml  init-db.sql  next.config.js  package-lock.json  package.json  pnpm-workspace.yaml  run-all.sh  run-backend.sh  run-frontend.sh  start.sh  tsconfig.json  user.sh
backend/: .env  Cargo.toml  setup.sh
backend/migrations/: 20240101000000_create_users.sql
backend/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
src/app/: layout.tsx  page.tsx
src/atomic/: Button.tsx  styles.module.scss
src/atomic/Button/: Button.tsx  styles.module.scss
src/atomic/Input/: Input.tsx  styles.module.scss
src/atomic/Select/: Select.tsx  styles.module.scss
src/components/auth/auth-page/: AuthPage.tsx  auth-page.module.scss
src/components/auth/login-form/: LoginForm.tsx  login-form.module.scss
src/components/auth/register-form/: RegisterForm.tsx  register-form.module.scss  styles.module.scss
src/components/client-layout/: ClientLayout.tsx  client-layout.module.scss  styles.module.scss
src/components/header/: Header.tsx  header.module.scss  styles.module.scss
src/components/stats-display/: StatsDisplay.tsx  stats-display.module.scss  styles.module.scss
src/components/theme-selector/: ThemeSelector.tsx  styles.module.scss  theme-selector.module.scss
src/lib/: api.ts  config.ts  constants.ts  schemas.ts
src/stores/: authStore.ts  rsvpStore.ts  themeStore.ts
src/styles/: _variables.scss  globals.scss
src/styles/partial/: _flex.scss  _form.scss
(+7 files in other folders)
