[package]
name = "rsvp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
validator = { version = "0.18", features = ["derive"] }
derive_more = "0.99"
jsonwebtoken = "9"
